Bug 1036070 - Remove dangerous public destructor of VisualEventTracer r=froydnj