xpcom/base/VisualEventTracer.cpp
@@ -537,7 +537,7 @@ Mark(uint32_t aType, void* aItem, const char* aText, const char* aText2)
 
 // The scriptable classes
 
-class VisualEventTracerLog : public nsIVisualEventTracerLog
+class VisualEventTracerLog MOZ_FINAL: public nsIVisualEventTracerLog
 {
   NS_DECL_ISUPPORTS
   NS_DECL_NSIVISUALEVENTTRACERLOG
@@ -547,8 +547,8 @@ class VisualEventTracerLog : public nsIVisualEventTracerLog
     , mProfilerStart(*gProfilerStart)
   {
   }
-
-  virtual ~VisualEventTracerLog();
+private:
+  ~VisualEventTracerLog();
 
 protected:
   RecordBatch* mBatch;
