xpcom/base/VisualEventTracer.h
@@ -214,10 +214,12 @@ private:
 
 // The scriptable class that drives the event tracer
 
-class VisualEventTracer : public nsIVisualEventTracer
+class VisualEventTracer MOZ_FINAL: public nsIVisualEventTracer
 {
   NS_DECL_ISUPPORTS
   NS_DECL_NSIVISUALEVENTTRACER
+private:
+  ~VisualEventTracer() {}
 };
 
 #define NS_VISUALEVENTTRACER_CID \
